PR/45661: Henning Petersen: Overlapping buffer in route.c.